--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,6 +4,6 @@
 @tailwind components;
 @tailwind utilities;
 
-body{
-  font-family: 'Montserrat', sans-serif;
+body {
+	font-family: "Montserrat", sans-serif;
 }
